style.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

body {
  background-color: white;
  color: rgb(58, 55, 55);
  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
    "Lucida Sans", Arial, sans-serif;
}

a {
  color: rgb(58, 55, 55);
}

img {
  display: block;
  margin: 0px auto;
  max-width: 100%;
  height: auto;
}

.column {
  float: left;
  width: 50%;
  padding: 25px;
  margin-top: 0.5em;
  margin-bottom: 0.5em;
}

.row::after {
  content: "";
  clear: both;
  display: table;
  padding: 25px;
}

h2 {
  border: none;
  margin-top: 1em;
  padding: 10px;
  color: #4372aa;
  font-weight: 500;
  font-size: 2em;
}

h3 {
  color: #4372aa;
}

p {
  border: none;
  padding: 10px;
  font-size: 1.2em;
}

address {
  font-style: normal;
}

header {
  margin: 1rem 1rem 0 1rem;
  padding: 0.5rem 1rem;
  background-color: white;
  text-align: center;
  display: block;
  float: center;
}

main {
  padding: 1rem 1rem 2rem;
  text-align: center;
}

footer {
  padding: 1rem;
  background-color: lightgrey;
  color: black;
  text-align: center;
  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
    "Lucida Sans", Arial, sans-serif;
}

nav a {
  text-transform: uppercase;
  text-decoration: none;
}

.main-menu {
  position: relative;
}

.main-nav {
  clip: rect(0 0 0 0);
  clip-path: inset(100%);
  opacity: 0;
  height: 0;
  list-style: none;
  position: relative;
  margin: 45px 25px 25px;
  max-width: 100%;
  font-size: 1.1em;
  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
    "Lucida Sans", Arial, sans-serif;
}

.main-nav li {
  display: block;
  width: 100%;
  margin-left: 10px;
  border: 2px solid white;
  text-align: center;
}

.main-nav a {
  display: block;
  padding: 4px;
  text-decoration: none;
  background-color: white;
  color: rgb(58, 55, 55);
  font-weight: 400;
  text-align: center;
  font-weight: bold;
}

.main-nav a:hover {
  background-color: lightgrey;
  color: rgb(58, 55, 55);
}

.menu-icon {
  cursor: pointer;
  display: inline-block;
  padding: 28px 20px;
  position: relative;
  user-select: none;
}

.menu-icon .navicon {
  background: #333;
  display: block;
  height: 2px;
  position: relative;
  transition: background 0.2s ease-out;
  width: 18px;
}

.menu-icon .navicon:before,
.menu-icon .navicon:after {
  background: #333;
  content: "";
  display: block;
  height: 100%;
  position: absolute;
  transition: all 0.2s ease-out;
  width: 100%;
}

.menu-icon .navicon:before {
  top: 5px;
}

.menu-icon .navicon:after {
  top: -5px;
}

.menu-btn {
  display: none;
}

.menu-btn:checked ~ .main-nav {
  opacity: 1;
  height: 150px;
  transition: all 0.2s ease-out;
}

.menu-btn:checked ~ .menu-icon .navicon {
  background: transparent;
}

.menu-btn:checked ~ .menu-icon .navicon:before {
  transform: rotate(-45deg);
}

.menu-btn:checked ~ .menu-icon .navicon:after {
  transform: rotate(45deg);
}

.menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
.menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
  top: 0;
}

.featured-image-container {
  display: block;
  position: relative;
  float: left;
  width: 50%;
}

.featured-image-container img {
  max-height: 70vh;
}

.featured-text-container {
  float: left;
  width: 50%;
  padding: 2rem;
  max-width: 500px;
}

.featured-text-container h1 {
  font-size: 1.75rem;
  margin-bottom: 2rem;
  color: #4372aa;
}

.featured-text-container p {
  font-size: 1.25rem;
  margin-bottom: 2rem;
  color: rgb(58, 55, 55);
}

.social-media {
  display: inline-block;
}

.social-media ul {
  display: flex;
  list-style: none;
  justify-content: flex-start;
  margin-left: -1rem;
}

.social-media a {
  padding: 1rem;
}

@media screen and (min-width: 768px) {
  .menu-icon {
    display: none;
  }

  .main-nav {
    list-style: none;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    opacity: 1;
    height: auto;
    clip: initial;
    clip-path: initial;
    margin: 25px;
  }

  .main-nav li {
    display: inline-block;
    width: 150px;
  }
}

div.gallery {
  border: 1px solid #ccc;
}

div.gallery:hover {
  border: 1px solid #777;
}

div.gallery img {
  width: 100%;
  height: auto;
}

div.desc {
  padding: 15px;
  text-align: center;
}

* {
  box-sizing: border-box;
}

.responsive {
  display: inline-block;
  padding: 20px;
  width: 24.99999%;
}

@media only screen and (max-width: 700px) {
  .responsive {
    width: 49.99999%;
    margin: 6px 0;
  }
}

@media only screen and (max-width: 500px) {
  .responsive {
    width: 100%;
  }
}

.clearfix:after {
  content: "";
  display: table;
  clear: both;
}

form {
  clear: both;
}

label {
  display: block;
  float: left;
  font-weight: 550;
  margin-bottom: 1em;
}

.form-input {
  border: 2px solid darkgray;
  border-radius: 4px;
  font-size: 16px;
  font-weight: 400;
  padding: 1em;
  margin-bottom: 1.5em;
  width: 100%;
}

.form-input:focus {
  outline: none;
  border: 2px solid black;
}

[type="submit"] {
  background: #4372aa;
  color: white;
  width: 100%;
  font-size: 1.5em;
  font-weight: 600;
  text-transform: uppercase;
  letter-spacing: 1px;
  border-radius: 4px;
  border: 0;
  padding: 0.5em;
  cursor: pointer;
}

[type="submit"]:hover,
[type="submit"]:focus {
  background: lightgrey;
}

textarea {
  height: 150px;
  resize: vertical;
}

.error {
  border-color: red;
}

.error-message {
  color: red;
  margin: -1em 0 1.5em;
  width: 100%;
}
table {
  margin-bottom: 25px;
  margin-top: 25px;
    }
	
.resources {
  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
    "Lucida Sans", Arial, sans-serif;
  border-collapse: collapse;
  width: 100%;
}

.resources td, .resources th {
  border: 1px solid #ddd;
  padding: 8px;
}

.resources tr:nth-child(even){background-color: #f2f2f2;}

.resources tr:hover {background-color: #ddd;}

.resources th {
  padding-top: 12px;
  padding-bottom: 12px;
  text-align: center;
  background-color: #4372aa;
  color: white;
}

